--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -4,7 +4,7 @@
     padding-top: 1rem;
     background-color: #ea2879;
     height: 9vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
